--- a/wedding-cards.html
+++ b/wedding-cards.html
@@ -184,7 +184,7 @@
 
             <div class="luxury-card p-6 border border-stone-100 rounded-2xl">
                 <div class="aspect-[3/4] overflow-hidden rounded-xl mb-8">
-                    <img src="https://images.unsplash.com/photo-1522673607200-1648832cee98?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale-[0.2] hover:grayscale-0 transition-all duration-700 hover:scale-110">
+                    <img src="https://www.pickybride.com/cdn/shop/files/minimalist-pure-white-and-personalized-photo-wedding-invitations-translucent-vellum-envelopes-invites-with-customized-wax-seal-vellum-save-the-date-picky-bride-569085_1024x1024.jpg?v=1734179054?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale-[0.2] hover:grayscale-0 transition-all duration-700 hover:scale-110">
                 </div>
                 <h3 class="serif text-2xl text-stone-900 mb-3">Minimalist Vellum</h3>
                 <p class="text-sm text-stone-500 font-light leading-relaxed mb-6">Translucent overlays paired with wax-sealed botanical inserts.</p>
