--- a/invitation-cards.html
+++ b/invitation-cards.html
@@ -199,7 +199,7 @@
 
             <div class="glass-card overflow-hidden rounded-[32px] group cursor-pointer" onclick="openWhatsApp('Baby Shower Invite')">
                 <div class="relative h-[450px]">
-                    <img src="https://images.unsplash.com/photo-1515488764276-3bc3dedb1f0c?auto=format&fit=crop&q=80&w=800" class="category-image w-full h-full object-cover">
+                    <img src="https://www.invitationbazaar.com/static/images/thumbnail/namingceremony/English/DelightfulDay_English_Thumbnail.webp?auto=format&fit=crop&q=80&w=800" class="category-image w-full h-full object-cover">
                     <div class="absolute inset-0 invitation-overlay flex items-end p-8">
                         <div>
                             <span class="text-indigo-400 text-[10px] uppercase tracking-[0.3em] font-bold mb-2 block">The Beginning</span>
