--- a/banners.html
+++ b/banners.html
@@ -251,7 +251,7 @@
         <div class="grid md:grid-cols-3 gap-10">
             <div class="glass-card group overflow-hidden rounded-[32px]">
                 <div class="h-64 overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1531050171669-7df9b2089a8f?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 group-hover:scale-110 transition duration-700">
+                    <img src="https://i.etsystatic.com/34264269/r/il/fc93a2/4251879020/il_1080xN.4251879020_3zgo.jpg?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 group-hover:scale-110 transition duration-700">
                 </div>
                 <div class="p-8">
                     <h3 class="font-bold text-lg mb-2">Event Backdrops</h3>
@@ -260,7 +260,7 @@
             </div>
             <div class="glass-card group overflow-hidden rounded-[32px]">
                 <div class="h-64 overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1560179707-f14e90ef3623?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 group-hover:scale-110 transition duration-700">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzOcuFxeHixTjVaX91v37zg0QpWtAPM0y3Jg&s?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 group-hover:scale-110 transition duration-700">
                 </div>
                 <div class="p-8">
                     <h3 class="font-bold text-lg mb-2">Retail Vinyl</h3>
@@ -269,7 +269,7 @@
             </div>
             <div class="glass-card group overflow-hidden rounded-[32px]">
                 <div class="h-64 overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1583508915901-b5f84c1dcde1?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 group-hover:scale-110 transition duration-700">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp8jVBcPZ39Abp49ABYILZN3zsprOafzHLWA&s?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 group-hover:scale-110 transition duration-700">
                 </div>
                 <div class="p-8">
                     <h3 class="font-bold text-lg mb-2">Exhibition Stands</h3>
