--- a/office-binding.html
+++ b/office-binding.html
@@ -237,7 +237,7 @@
 
             <div class="relative">
                 <div class="grid grid-cols-2 gap-6 relative z-10">
-                    <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTK9tBSDTiJ71PMS02ji_Qmv0RvJMcJulEGJK4ZEDHaN8tmrNsg?auto=format&fit=crop&q=80&w=800" class="rounded-[2rem] shadow-2xl grayscale hover:grayscale-0 transition duration-1000">
+                    <img src="https://image.made-in-china.com/202f0j00aVtGmiKWCbkj/Supu-A4-Size-Paper-Packing-Book-Binding-Alumium-Machine-for-Spiral-Comb-and-Wire.webp?auto=format&fit=crop&q=80&w=800" class="rounded-[2rem] shadow-2xl grayscale hover:grayscale-0 transition duration-1000">
                     <img src="https://5.imimg.com/data5/SELLER/Default/2021/4/CB/KO/GI/44416525/office-box-file-500x500.jpg?auto=format&fit=crop&q=80&w=800" class="rounded-[2rem] shadow-2xl mt-12 grayscale hover:grayscale-0 transition duration-1000">
                 </div>
                 <div class="absolute -inset-4 bg-emerald-500/10 blur-3xl -z-10 rounded-full"></div>
