--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
             <div class="premium-card rounded-[32px] p-4 group">
                 <div class="rounded-[24px] overflow-hidden aspect-square mb-8 relative">
-                    <img src="https://images.unsplash.com/photo-1589330694653-ded6df03f754?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700 group-hover:scale-105">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFqoQHivd8cayeI90fVZs4RbMMUdknByr4SA&s?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700 group-hover:scale-105">
                 </div>
                 <div class="px-4 pb-4 text-left">
                     <h3 class="text-2xl font-semibold mb-3 text-white">Executive Cards</h3>
@@ -251,7 +251,7 @@
             </div>
             <div class="premium-card rounded-[32px] p-4 group">
                 <div class="rounded-[24px] overflow-hidden aspect-square mb-8 relative">
-                    <img src="https://images.unsplash.com/photo-1530543787849-128d94430c6b?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700 group-hover:scale-105">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFKoFd570fIQm-DpbSdj6iUcz8y5A5HASFKQ&s?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700 group-hover:scale-105">
                 </div>
                 <div class="px-4 pb-4 text-left">
                     <h3 class="text-2xl font-semibold mb-3 text-white">Bespoke Packaging</h3>
@@ -260,7 +260,7 @@
             </div>
             <div class="premium-card rounded-[32px] p-4 group">
                 <div class="rounded-[24px] overflow-hidden aspect-square mb-8 relative">
-                    <img src="https://images.unsplash.com/photo-1517048676732-d65bc937f952?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700 group-hover:scale-105">
+                    <img src="https://media.istockphoto.com/id/481663412/vector/corporate-identity-template-set.jpg?s=612x612&w=0&k=20&c=Pihbxro1FAWVOvTUIIM3kw_J9XGxyy6ZdgT8pQagbNM=?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700 group-hover:scale-105">
                 </div>
                 <div class="px-4 pb-4 text-left">
                     <h3 class="text-2xl font-semibold mb-3 text-white">Brand Stationery</h3>
